pkg/tests/testthat/errors/mdl/include1.mdl
ident a = 1; 

#include "incl/incl_err.mdl"
